Implementação da sincronização

--- a/src/SME.NovoSGP.Abrangencia.Dados/SME.NovoSGP.Abrangencia.Dados.csproj
+++ b/src/SME.NovoSGP.Abrangencia.Dados/SME.NovoSGP.Abrangencia.Dados.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\SME.NovoSGP.Abrangencia.Infra\SME.NovoSGP.Abrangencia.Infra.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repositorio\EOL\" />
+    <Folder Include="Repositorio\Abrangencia\" />
+  </ItemGroup>
+
 </Project>
